fixed create launcher

--- a/lambda/controller/index.html
+++ b/lambda/controller/index.html
@@ -24,14 +24,14 @@
     <v-container fluid>
       <div class="text-h5">Welcome</div>
 
-      <v-btn
+      <!-- <v-btn
         color="success"
         @click="allowIp"
         :disabled="isLoading"
         :loading="isLoading">
         <v-icon left>mdi-door-open</v-icon>
-        Allow access to my Bank Account
-      </v-btn>      
+        Test
+      </v-btn>       -->
     </v-container>
   </script>
 </head>
