--- a/lambda/controller/login.html
+++ b/lambda/controller/login.html
@@ -46,7 +46,7 @@
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
-            <input type="password" id="key" placeholder="Enter your key">
+            <input type="password" id="key" placeholder="Enter your key" autofocus>
             <button type="submit">Login</button>
         </form>
     </div>
