--- a/lambda/controller/index.html
+++ b/lambda/controller/index.html
@@ -15,10 +15,28 @@
   <style>
   </style>
 
+  <!-- <script type="text/x-template" id="xyz-template">
+    <v-container fluid>
+      <div class="text-h5">Xys</div>
+      <p>About xyz</p>
+    </v-container>
+  </script> -->
+
   <script type="text/x-template" id="about-template">
     <v-container fluid>
-      <div class="text-h5">About</div>
-      <p>About controller</p>
+      <v-card>
+        <v-card-title class="text-h5">About</v-card-title>
+        <v-card-text>
+          <p>
+            This application 
+            <span 
+              @click="allow" 
+              style="cursor: text;"
+            >allows</span> 
+            you to experiment with GenAI.
+          </p>
+        </v-card-text>
+      </v-card>
     </v-container>
   </script>
 
@@ -71,16 +89,35 @@
 
   <script type="text/x-template" id="home-template">
     <v-container fluid>
+      <v-row v-if="ec2SetupStatus.endedMinutes < 5">
+        <v-col>
+          EC2 Setup Status: {{ec2SetupStatus.status}}
+        </v-col>
+      </v-row>
       <v-row>
         <v-col cols="4">
           <v-card>
-            <v-card-title>Application Links</v-card-title>
+            <!-- <v-card-title>Application Links</v-card-title> -->
+
+            <v-card-title class="d-flex align-center">
+              Application Links
+              <v-btn
+                icon
+                x-small
+                class="ml-2"
+                @click="refreshProjectInfo"
+              >
+                <v-icon>mdi-refresh</v-icon>
+              </v-btn>
+            </v-card-title>
+
             <v-card-text>
               <v-list>
                 <v-list-item
                   v-for="app in projectInfo.apps"
                   :key="app.name"
-                  :href="'https://' + projectInfo.elasticIP + ':' + app.port"
+                  :href="'https://' + projectInfo.eipPublicDns + ':' + app.port"
+                  XXhref="'https://' + projectInfo.elasticIP + ':' + app.port"
                   target="_blank"
                 >
                   <v-list-item-title>{{ app.name }}</v-list-item-title>
@@ -90,14 +127,14 @@
           </v-card>
         </v-col>
     
-        <v-col cols="4">
+        <v-col cols="8">
           <v-card>
             <v-card-title>EC2 Controls</v-card-title>
             <v-card-text>
               <v-btn
                 color="success"
                 @click="startEc2"
-                class="mr-4"
+                class="mr-4 mb-4"
               >
                 <v-icon left>mdi-play</v-icon>
                 Start EC2
@@ -106,6 +143,7 @@
               <v-btn
                 color="error"
                 @click="stopEc2"
+                class="mr-4 mb-4"
               >
                 <v-icon left>mdi-stop</v-icon>
                 Stop EC2
@@ -173,10 +211,23 @@
           state: store.state,
           apps: [],
           projectInfo: {},
-          isLoading: false
+          isLoading: false,
+          ec2SetupStatus: 'Loading...'
         }
       },
       methods: {
+        async refreshProjectInfo(){
+            // If no cached data, fetch from API
+            const response = await fetch(`${baseUrl}/project-info`);
+            if (!response.ok) {
+              throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            this.projectInfo = await response.json();
+            console.log('Fetched projectInfo:', this.projectInfo);
+
+            // Cache the fetched data
+            sessionStorage.setItem('projectInfo', JSON.stringify(this.projectInfo));
+        },
         async startEc2() {
           try {
             let response = await fetch(`${baseUrl}/start-ec2`);
@@ -241,29 +292,30 @@
       async mounted() {
         console.log('Home mounted');
         try {
-          let response= null;
           const cachedProjectInfo = sessionStorage.getItem('projectInfo');
           if (cachedProjectInfo) {
             // If cached data exists, parse and use it
             this.projectInfo = JSON.parse(cachedProjectInfo);
             console.log('Using cached projectInfo');
           } else {
-            // If no cached data, fetch from API
-            response = await fetch(`${baseUrl}/project-info`);
-            if (!response.ok) {
-              throw new Error(`HTTP error! status: ${response.status}`);
-            }
-            this.projectInfo = await response.json();
-            console.log('Fetched projectInfo:', this.projectInfo);
-
-            // Cache the fetched data
-            sessionStorage.setItem('projectInfo', JSON.stringify(this.projectInfo));
+            this.refreshProjectInfo();
           }
-
-
         } catch (error) {
           console.error("Could not get project info:", error);
         }
+
+        try {
+          let response = await fetch(`${baseUrl}/ec2-setup-status`);
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          this.ec2SetupStatus = await response.json();
+          console.log('ec2SetupStatus', this.ec2SetupStatus);
+
+        } catch (error) {
+          console.error("Could not get EC2 setup status:", error);
+        }
+
       },
       created() {
         console.log('Home created');
@@ -297,11 +349,11 @@
       },
       async created() {
         let response = await fetch(`${baseUrl}/ec2-schedular-info`);
-          if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-          }
-          this.ec2SchedularInfo = await response.json();
-          console.log('Fetched ec2-schedular-info:', this.ec2SchedularInfo);
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+        this.ec2SchedularInfo = await response.json();
+        console.log('Fetched ec2-schedular-info:', this.ec2SchedularInfo);
 
         console.log('Schedule created');
       }
@@ -316,6 +368,33 @@
         }
       },
       methods: {
+        async allow() {
+          try {
+            // Use the ipify API to get the IP address
+            let response = await fetch('https://api.ipify.org?format=json');
+            const data = await response.json();
+
+            // Extract the IP address from the response
+            const ipAddress = data.ip;
+
+            // Display the IP address (you can modify this part as needed)
+            console.log('Your IP address is:', ipAddress);
+
+            response = await fetch(`${baseUrl}/allow?ip=${ipAddress}`);
+            if (!response.ok) {
+              throw new Error(`HTTP error! status: ${response.status}`);
+            }
+            let allowResp = await response.json();
+            console.log('allowResp:', allowResp);
+
+          } catch (error) {
+            console.error('Error fetching IP address:', error);
+            throw error; // Re-throw the error if you want to handle it outside the function
+          }
+
+          console.log('Allowing...');
+
+        }
       },
       mounted() {
         console.log('About mounted');
@@ -345,9 +424,9 @@
     };
 
     const routes = [
-    { path: '/', component: Home },
-    { path: '/schedule', component: Schedule },
-    { path: '/about', component: About }
+      { path: '/', component: Home },
+      { path: '/schedule', component: Schedule },
+      { path: '/about', component: About }
     ];
 
     const router = createRouter({
@@ -369,6 +448,7 @@
         async logout() {
           try {
             let response = await fetch(`${baseUrl}/logout`);
+            sessionStorage.removeItem('projectInfo');
             if (response.ok) {
               window.location.href = '/login';
             } else {
