--- a/web-apps/server-tool/index.html
+++ b/web-apps/server-tool/index.html
@@ -35,7 +35,7 @@
       <v-card>
         <v-card-title class="text-h5">Home</v-card-title>
         <v-card-text>
-          <p>Welcome home</p>
+          <p>Welcome home!</p>
         </v-card-text>
       </v-card>
     </v-container>
