--- a/web-apps/server-tool/index.html
+++ b/web-apps/server-tool/index.html
@@ -171,7 +171,7 @@
           return new Promise((resolve, reject) => {
             // Simulating API call
             setTimeout(() => {
-              if (password === '123123123') {
+              if (password === 'testtest') {
                 resolve({ token: 'fake-jwt-token' });
               } else {
                 reject(new Error('Invalid password'));
